--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -1,11 +1,11 @@
 .parent {
 	width: 100%;
 	height: 100%;
-	background-image: url(../../assets/mountains-cutout.webp);
+	background-image: url(../../../assets/mountains-cutout.webp);
 	background-size: 100%;
 	background-position: bottom;
 	background-repeat: no-repeat;
-	.signup-form-parent {
+	.login-form-parent {
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -19,7 +19,7 @@
 			width: 100%;
 		}
 	
-		.lock-icon-parent {
+		.title {
 			text-align: center;
 			padding: 0 0 20px 0;
 			color: rgba(0, 0, 0, 0.8);
@@ -29,12 +29,6 @@
 			strong {
 				font-family: "Raleway", sans-serif;
 			}
-		}
-	
-		.remember-me {
-			font-size: 14px;
-			margin-bottom: 25px;
-			color: rgba(0, 0, 0, 0.5);
 		}
 	
 		.login-signup {
