progress bars added

--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
+<mat-progress-bar mode="query" *ngIf="isLoading">
+</mat-progress-bar>
 <div class="parent">
   <div class="login-form-parent box-shadow">
     <div class="title">
