--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -27,6 +27,46 @@
                 font-family: 'Raleway', sans-serif;
                 text-transform: uppercase;
             }
+
+            .profile-picture {
+                border-radius: 50%;
+                display: flex;
+                flex-direction: row;
+                margin-bottom: 25px;
+
+                .text {
+                    p {
+                        margin-bottom: 0;
+    
+                        &:nth-of-type(1) {
+                            font-size: 20px;
+                            font-weight: bold;
+                            margin-top: 16px;
+                        }
+    
+                        &:nth-of-type(2) {
+                            margin-top: 10px;
+                            font-size: 12px;
+                        }
+                    }
+                }
+
+                img {
+                    border: 3px solid transparent;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    margin-left: 15px;
+                    width: 75px;
+                    height: 75px;
+                    margin-right: 15px;
+                    transition: border-color 0.2s ease-in-out;
+
+                    &:hover {
+                        border-color: #2196F3;
+                    }
+                }
+            }
+
             mat-form-field {
                 display: block;
                 width: 100%;
