--- a/client/src/app/pages/feed/post/atc/atc.component.html
+++ b/client/src/app/pages/feed/post/atc/atc.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title><fa-icon [icon]="faPlus"></fa-icon>Add to Collection</h1>
+<h1 mat-dialog-title>Add to Collection</h1>
 <div class="dialog-image">
   <img [src]="data.image" alt="Image">
 </div>
