--- a/client/src/app/pages/page-not-found/page-not-found.component.html
+++ b/client/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,4 +1,7 @@
-<div class="page-not-found">
-  <p>404</p>
-  <p>Page not found</p>  
+<div class="container">
+  <div class="page-not-found">
+    <h1>404</h1>
+    <p>Page not found</p>
+    <button mat-raised-button color="accent" [routerLink]="['']" matTooltip="To the place I belong">Take me Home</button>  
+  </div>
 </div>
