profile page updated

--- a/client/src/app/pages/feed/feed.component.html
+++ b/client/src/app/pages/feed/feed.component.html
@@ -6,7 +6,7 @@
       [ngClass]="isFabActive ? 'animation-rotate90Clockwise' : 'animation-rotate90AntiClockwise'">
       <fa-icon [icon]="faPlus"></fa-icon>
     </button>
-    <button class="fab-add-post" mat-mini-fab matTooltipPosition="left" [ngClass]="isFabActive ? 'animation-appearFromBottom' : 'animation-disappearFromTop'" matTooltip="Add a Post">
+    <button class="fab-add-post" mat-mini-fab matTooltip="Add a Post" matTooltipPosition="left" [ngClass]="isFabActive ? 'animation-appearFromBottom' : 'animation-disappearFromTop'">
       <fa-icon [icon]="faLink"></fa-icon>
     </button>
     <button class="fab-add-document" mat-mini-fab matTooltipPosition="left" [ngClass]="isFabActive ? 'animation-appearFromBottom2' : 'animation-disappearFromTop2'" matTooltip="Add a Document">
