--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -18,6 +18,7 @@
             flex-direction: row;
             margin-bottom: 20px;
             margin-top: 25px;
+            position: relative;
 
             .text {
                 p {
@@ -33,6 +34,22 @@
                         margin-top: 10px;
                         font-size: 12px;
                     }
+                }
+            }
+
+            .view-public {
+                background-color: rgba(0, 0, 0, .05);
+                border-radius: 50%;
+                cursor: pointer;
+                position: absolute;
+                padding: 10px;
+                top: 50%;
+                transform: translateY(-50%);
+                right: 25px;
+                transition: background-color .2s ease-in-out;
+
+                &:hover {
+                    background-color: rgba(0, 0, 0, .1);
                 }
             }
 
@@ -76,6 +93,21 @@
                 button {
                     float: right;
                 }
+            }
+        }
+
+        .public-view-content {
+            h1 {
+                font-weight: 300;
+
+                fa-icon {
+                    font-size: 16px;
+                    margin-top: -2px;
+                }
+            }
+
+            .bio {
+                line-height: 25px;
             }
         }
     }
