wip profile progress bar

--- a/client/src/app/pages/feed/post/po/po.component.html
+++ b/client/src/app/pages/feed/post/po/po.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>
-  <fa-icon [icon]="faCog"></fa-icon>Post Options
+  Post Options
 </h1>
 <div class="options">
   <div class="top">
