--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -110,5 +110,14 @@
                 line-height: 25px;
             }
         }
+
+        .complete-profile-button {
+            margin-top: 25px;
+            margin-bottom: 20px;
+        }
+    }
+
+    mat-divider {
+        margin-bottom: 15px;
     }
 }
