--- a/client/src/app/pages/signup/signup.component.html
+++ b/client/src/app/pages/signup/signup.component.html
@@ -45,6 +45,12 @@
               Password must be at least 4 characters
             </mat-error>
           </mat-form-field>
+          <div class="password-rules">
+            <ul>
+              <li>Option 1</li>
+              <li>Option 2</li>
+            </ul>
+          </div>
         </div>
 
         <div class="col-xs-12">
