--- a/client/src/app/pages/profile/cpi/cpi.component.scss
+++ b/client/src/app/pages/profile/cpi/cpi.component.scss
@@ -2,7 +2,8 @@
     margin-bottom: 25px;
 	img {
         display: block;
-		width: 200px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         margin-left: auto;
         margin-right: auto;
