working on uploading image

--- a/client/src/app/pages/profile/cpi/cpi.component.html
+++ b/client/src/app/pages/profile/cpi/cpi.component.html
@@ -2,12 +2,14 @@
 
 <div class="image">
   <img [src]="userImage ? userImage : defaultProfileImage" alt="">
+  <div class="delete-user-image" matRipple *ngIf="userImage || isNewImage" (click)="clearImage()">
+    <fa-icon [icon]="faTrash"></fa-icon>
+  </div> 
 </div>
 
 <div class="controls">
   <input hidden (change)="onFileSelected(fileInput.files)" #fileInput type="file" id="file">
   <button mat-flat-button (click)="fileInput.click()" *ngIf="!isNewImage">Upload</button>
   <button mat-flat-button color="primary" *ngIf="isNewImage">Save</button>
-  <button mat-flat-button (click)="clearImage()" *ngIf="isNewImage">Clear</button>
   <button mat-button (click)="onNoClick()">Close</button>
 </div>
