--- a/client/src/app/pages/profile/cpi/cpi.component.scss
+++ b/client/src/app/pages/profile/cpi/cpi.component.scss
@@ -1,4 +1,5 @@
 .image {
+    position: relative;
     margin-bottom: 25px;
 	img {
         display: block;
@@ -7,7 +8,22 @@
         border-radius: 50%;
         margin-left: auto;
         margin-right: auto;
-	}
+    }
+    
+    .delete-user-image {
+        background-color: #F44336;
+        box-shadow: 0 8px 20px 0 rgba(0, 0, 0, .6);
+        cursor: pointer;
+        padding: 11px 12px 9px 12px;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        right: 10px;
+
+        fa-icon {
+            color: white;
+        }
+    }
 }
 
 .controls {
