updated onfilechange code

--- a/client/src/app/pages/profile/cpi/cpi.component.html
+++ b/client/src/app/pages/profile/cpi/cpi.component.html
@@ -3,13 +3,13 @@
 <div class="image">
   <img [src]="userImage ? userImage : defaultProfileImage" alt="">
   <div class="delete-user-image" matRipple *ngIf="userImage || isNewImage" (click)="clearImage()">
-    <fa-icon [icon]="faEdit"></fa-icon>
+    <fa-icon [icon]="faTrash"></fa-icon>
   </div> 
 </div>
 
 <div class="controls">
-  <input hidden (change)="onFileSelected(fileInput.files)" #fileInput type="file" id="file">
-  <button mat-flat-button (click)="fileInput.click()" *ngIf="!isNewImage">Upload</button>
+  <input hidden (change)="onFileSelected(imageInput)" #imageInput type="file" id="file" accept="image/*">
+  <button mat-flat-button (click)="imageInput.click()" *ngIf="!isNewImage">Upload</button>
   <button mat-flat-button color="primary" *ngIf="isNewImage" (click)="saveProfilePhoto()">Save</button>
   <button mat-button (click)="onNoClick()">Close</button>
 </div>
