--- a/client/src/app/pages/profile/cpi/cpi.component.scss
+++ b/client/src/app/pages/profile/cpi/cpi.component.scss
@@ -14,7 +14,7 @@
         background-color: #F44336;
         box-shadow: 0 8px 20px 0 rgba(0, 0, 0, .6);
         cursor: pointer;
-        padding: 11px 9px 9px 11px;
+        padding: 10px 12px;
         border-radius: 50%;
         position: absolute;
         top: 0;
