--- a/client/src/app/pages/profile/cpi/cpi.component.html
+++ b/client/src/app/pages/profile/cpi/cpi.component.html
@@ -2,7 +2,7 @@
 
 <div class="image">
   <img [src]="userImage ? userImage : defaultProfileImage" alt="">
-  <div class="delete-user-image" matRipple *ngIf="isNewImage || userImage" (click)="clearImage()">
+  <div class="delete-user-image" matRipple *ngIf="userImage || isNewImage" (click)="clearImage()">
     <fa-icon [icon]="faTrash"></fa-icon>
   </div> 
 </div>
