--- a/client/src/app/pages/profile/cpi/cpi.component.scss
+++ b/client/src/app/pages/profile/cpi/cpi.component.scss
@@ -37,3 +37,15 @@
         }
     }
 }
+
+mat-progress-spinner {
+    width: 25px !important;
+    height: 25px !important;
+    display: inline-block;
+    margin-right: 10px;
+
+    svg {
+        width: 25px !important;
+        height: 25px !important;
+    }
+}
